Fixed the mismatch in alignment when opening calculcator in browser

--- a/calc/calc.css
+++ b/calc/calc.css
@@ -2,7 +2,7 @@
     max-width: 208px;
     max-height: 180px;
     border: 1px solid black;
-    padding: 10  0 10 10;
+    padding: 10px 0px 10px 10px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -12,7 +12,7 @@ h1 {
 }
 
 .calcDisplay #displayText {
-    width: 198px;
+    width: 193px;
     text-align: right;
     height: 30px;
 }
